--- a/spec/index.html
+++ b/spec/index.html
@@ -29,21 +29,19 @@
           { name: "Chimezie Ogbuji" },
         ],
 
-        github: { repoURL: "https://github.com/w3c/sparql-entailment", branch: "main"},
+        github: "https://github.com/w3c/sparql-entailment",
 
         shortName: "sparql12-entailment",
         xref: "web-platform",
         group: "rdf-star" ,
         wgPublicList: "public-rdf-star-wg",
 
-// Only for publication        
-//         prevVersion:          "http://www.w3.org/TR/2013/REC-sparql11-entailment-20130321",
-//         previousPublishDate:  "2013-03-21",
-//         previousMaturity:     "TR",
-//         prevRecURI:           "http://www.w3.org/TR/2013/REC-sparql11-entailment-20130321",
+      previousPublishDate:  "2013-03-21",
+      previousMaturity:     "REC",
+      prevRecShortname:     "sparql11-entailment",
         
-        errata:               "https://w3c.github.io/rdf-star-wg/errata",
-        edDraftURI:           "https://w3c.github.io/sparql12-entailment/",
+//        errata:               "https://w3c.github.io/sparql12-entailment/errata/",
+        edDraftURI:           "https://w3c.github.io/sparql12-entailment/spec/",
         testSuiteURI:         "https://w3c.github.io/rdf-tests/",
 //        implementationReportURI: "https://w3c.github.io/sparql12-entailment/reports/",
 
