Add pfps as editor

--- a/spec/index.html
+++ b/spec/index.html
@@ -18,7 +18,7 @@
         testSuiteURI:         "https://w3c.github.io/rdf-tests/",
         shortName:            "sparql12-entailment",
         copyrightStart:       "2012",
-         
+
         github:               "https://github.com/w3c/sparql-entailment",
         wgPublicList:         "public-rdf-star-wg",
 
@@ -32,7 +32,7 @@
         previousMaturity:     "REC",
         
          editors: [
-           { name: "RDF Star Working Group" }
+           { name: "Peter Patel-Schneider", w3cid: "13382"}
          ],
         formerEditors: [
           { name: "Birte Glimm" },
