--- a/spec/index.html
+++ b/spec/index.html
@@ -229,7 +229,7 @@
               </tbody>
             </table>
           </div>
-          <p>A 'binding' is a pair (<a data-cite="SPARQL12-QUERY#defn_QueryVariable">variable</a>, <a data-cite="SPARQL12-QUERY#defn_RDFTerm">RDF term</a>). In this
+          <p>A 'binding' is a pair (<a data-cite="SPARQL12-QUERY#defn_QueryVariable">variable</a>, <a data-cite="RDF12-CONCEPTS#dfn-rdf-term">RDF term</a>). In this
           result set, there are three variables: <code>x</code>, <code>y</code>, and <code>z</code> (shown as column headers). Each solution is shown as one row in the body of the table. Here, there
           is a single solution, in which variable <code>x</code> is bound to <code>"Alice"</code>, variable <code>y</code> is bound to <code>&lt;http://example/a&gt;</code>, and variable
           <code>z</code> is not bound to an RDF term. Variables are not required to be bound in a solution.</p>
