Update ref for SPARQL definitions

--- a/spec/index.html
+++ b/spec/index.html
@@ -451,7 +451,7 @@ span.cancast:hover { background-color: #ffa;
         </section>
         <section id="prelims">
           <h4>Preliminary Definitions</h4>
-          <p>This document uses the same <a data-cite="SPARQL12-QUERY#sparqlBasicTerms">definitions</a> as the
+          <p>This document uses the same <a data-cite="SPARQL12-QUERY#initDefinitions">definitions</a> as the
             [[[SPARQL12-QUERY]]] specification. Important terms are recaptured below for clarity. In the case of any differences, the SPARQL Query Language definitions are the normative ones.</p>
           <p>The term <em>I</em> denotes the set of all IRIs, <em>RDF-L</em> the set of all <a data-cite="RDF12-CONCEPTS#dfn-literal">RDF Literals</a>,
           and <em>RDF-B</em> the set of all <a data-cite="RDF12-CONCEPTS#dfn-blank-node">blank nodes</a> in RDF graphs.</p>
