Update ref to Semantics rdfD1

--- a/spec/index.html
+++ b/spec/index.html
@@ -808,7 +808,7 @@ ex:d rdf:_1 ex:a .</pre>
             </tbody>
           </table>
         </div>
-        <p>since <code>ex:a ex:b ex:c</code> RDF entails <code>ex:b a rdf:Property</code> (see also the <a data-cite="RDF12-SEMANTICS#dfn-rdfD1">RDF entailment rule</a> <em>rdfD1</em>). Further, the axiomatic triples give possible solutions such as</p>
+        <p>since <code>ex:a ex:b ex:c</code> RDF entails <code>ex:b a rdf:Property</code> (see also the <a data-cite="RDF12-SEMANTICS#dfn-rdfd1">RDF entailment rule</a> <em>rdfD1</em>). Further, the axiomatic triples give possible solutions such as</p>
         <div class="result">
           <span class="doc-ref" id="table4"></span>
           <table class="resultTable">
