add localBiblio to respec config

--- a/spec/index.html
+++ b/spec/index.html
@@ -35,7 +35,7 @@
         wgPublicList:         "public-rdf-star-wg",
 //        implementationReportURI: "https://w3c.github.io/sparql12-entailment/reports/",
 //        errata:               "https://w3c.github.io/sparql12-entailment/errata/",
-//        localBiblio:          localBibliography,
+        localBiblio:          localBibliography,
         
         lint: { "no-unused-dfns": false }
       };
