fix reference to RDF-based semantics entailment

--- a/spec/index.html
+++ b/spec/index.html
@@ -377,7 +377,7 @@ span.cancast:hover { background-color: #ffa;
       <a data-cite="RDF12-SEMANTICS#rdf_entail">RDF entailment</a>,
       <a data-cite="RDF12-SEMANTICS#rdfs_entailment">RDF Schema entailment</a>,
       <a data-cite="RDF12-SEMANTICS#D_entailment">D-Entailment</a>,
-      <a data-cite="OWL2-MAPPING-TO-RDF#Satisfaction.2C_Consistency_and_Entailment">OWL 2 RDF-Based Semantics entailment</a>,
+      <a data-cite="OWL2-RDF-BASED-SEMANTICS#Satisfaction.2C_Consistency_and_Entailment">OWL 2 RDF-Based Semantics entailment</a>,
       <a data-cite="OWL2-DIRECT-SEMANTICS#Inference_Problems">OWL 2 Direct Semantics entailment</a>, and
       <a data-cite="RIF-RDF-OWL#def-simple-entails">RIF-Simple entailment</a>.</p>
 
